--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
+    "firebase": "^10.5.2",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
