--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -26,6 +26,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "firebase-tools": "^12.8.1",
     "typescript": "^4.9.0"
   },
   "private": true
