--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -16,8 +16,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "firebase": "^10.7.1",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.6.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
