--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
-    "@mui/material-nextjs": "^5.15.11",
+    "@mui/material-nextjs": "^5.16.14",
     "firebase": "^10.5.2",
-    "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.23",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "^14.2.23",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
