--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/poppins": "^5.1.1",
     "@mui/material": "^5.14.16",
     "@mui/material-nextjs": "^5.16.14",
     "firebase": "^10.5.2",
