remove frontend dependencies

--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "emulate:frontend": "cd frontend && npm run dev",
     "emulate:backend": "cd backend && npm run dev",
     "install": "cd backend && npm i && cd ../../frontend && npm i"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.3"
-  }
+   },
+  "license": "ISC"
 }
