--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
     "emulate:backend": "cd backend && npm run dev",
     "install": "cd backend && npm i && cd ../../frontend && npm i"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.479.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
+  }
 }
